--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -55,9 +55,15 @@ jobs:
           echo "gh auth status:"
           gh auth status || true
           echo "gh api user (login):"
-          gh api user --jq .login || true
+          LOGIN=$(gh api user --jq .login 2>/dev/null || true)
+          echo "${LOGIN:-"(none)"}"
           if [ -z "${GH_TOKEN:-}" ]; then
-            echo "::warning::GH_TOKEN is not set; gh may use GITHUB_TOKEN or be unauthenticated. Cross-repo searches can fail or return 0."
+            echo "::error::GH_TOKEN is not set; add PR_REAPER_TOKEN with repo scope."
+            exit 1
+          fi
+          if [ -z "$LOGIN" ]; then
+            echo "::error::gh is unauthenticated; check PR_REAPER_TOKEN."
+            exit 1
           fi
 
       - name: Build search query
