--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -50,29 +50,43 @@ jobs:
 
       - name: Show auth identity
         run: |
-          echo "gh version:"
-          gh --version | head -n1 || true
-          echo "gh auth status:"
-          gh auth status || true
+          set -euo pipefail
+          echo "gh version:"; gh --version | head -n1 || true
+          echo "gh auth status:"; gh auth status || true
+
           echo "gh api user (login):"
-          LOGIN=$(gh api user --jq .login 2>/dev/null || true)
+          LOGIN="$(gh api user --jq .login 2>/dev/null || true)"
           echo "${LOGIN:-"(none)"}"
+
           if [ -z "${GH_TOKEN:-}" ]; then
             echo "::error::GH_TOKEN is not set; add PR_REAPER_TOKEN with repo scope."
             exit 1
           fi
-          if [ -z "$LOGIN" ]; then
+          if [ -z "${LOGIN:-}" ]; then
             echo "::error::gh is unauthenticated; check PR_REAPER_TOKEN."
             exit 1
           fi
-          SCOPES=$(gh api -i user 2>/dev/null | tr -d '\r' | sed -n 's/^x-oauth-scopes: //p')
-          echo "token scopes: ${SCOPES:-"(none)"}"
-          if ! grep -qw repo <<< "$SCOPES"; then
-            echo "::error::PR_REAPER_TOKEN lacks repo scope; search will be empty."
-            exit 1
+
+          # Case-insensitive header parse; some runners capitalize this header.
+          RAW_HEADERS="$(gh api -i user 2>/dev/null | tr -d '\r' || true)"
+          SCOPES="$(awk 'BEGIN{IGNORECASE=1} /^x-oauth-scopes:/ {sub(/^x-oauth-scopes:[[:space:]]*/,""); print}' <<< "$RAW_HEADERS")"
+
+          # Fallback: parse scopes from `gh auth status` if header isn’t present.
+          if [ -z "${SCOPES:-}" ]; then
+            SCOPES="$(gh auth status 2>/dev/null | sed -n 's/.*Token scopes: \(.*\)$/\1/p' | tr -d "'\" | tr -d ,)"
           fi
-          if ! grep -qw read:org <<< "$SCOPES"; then
-            echo "::warning::PR_REAPER_TOKEN lacks read:org; org PRs may be skipped."
+          SCOPES_TRIM="$(echo "${SCOPES:-}" | xargs || true)"
+          echo "token scopes (best-effort): ${SCOPES_TRIM:-"(unknown)"}"
+
+          has_repo=0; has_readorg=0
+          grep -Eiq '(^|[[:space:],])repo([[:space:],]|$)' <<< "${SCOPES_TRIM:-}" && has_repo=1 || true
+          grep -Eiq '(^|[[:space:],])read:org([[:space:],]|$)' <<< "${SCOPES_TRIM:-}" && has_readorg=1 || true
+
+          if [ "$has_repo" -ne 1 ]; then
+            echo "::warning::Could not verify 'repo' scope from headers; continuing. The next API call will fail if insufficient."
+          fi
+          if [ "$has_readorg" -ne 1 ]; then
+            echo "::warning::Could not verify 'read:org'; org PRs may be skipped."
           fi
 
       - name: Build search query
