--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -98,7 +98,7 @@ jobs:
           if [ -z "$AUTHOR" ]; then
             AUTHOR="${{ github.actor }}"
           fi
-          Q="is:pr is:open author:${AUTHOR} archived:false"
+          Q="is:pr is:open author:${AUTHOR}"
           if [ -n "${{ github.event.inputs.org }}" ]; then
             Q="$Q org:${{ github.event.inputs.org }}"
           fi
