--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -83,38 +83,37 @@ jobs:
           grep -Eiq '(^|[[:space:],])repo([[:space:],]|$)' <<< "${SCOPES_TRIM:-}" && has_repo=1 || true
           grep -Eiq '(^|[[:space:],])read:org([[:space:],]|$)' <<< "${SCOPES_TRIM:-}" && has_readorg=1 || true
 
+          ORG_INPUT="${{ github.event.inputs.org }}"
           if [ "$has_repo" -ne 1 ]; then
-            echo "::warning::Could not verify 'repo' scope from headers; continuing."
-            echo "::warning::The next API call will fail if insufficient."
+            echo "::error::GH_TOKEN lacks 'repo' scope; add PR_REAPER_TOKEN with repo scope."
+            exit 1
+          fi
+          if [ -n "$ORG_INPUT" ] && [ "$has_readorg" -ne 1 ]; then
+            echo "::error::GH_TOKEN lacks 'read:org' scope required for org searches."
+            exit 1
           fi
           if [ "$has_readorg" -ne 1 ]; then
             echo "::warning::Could not verify 'read:org'; org PRs may be skipped."
           fi
-
-      - name: Build search query
-        id: q
+      - name: Search PRs
+        # Use gh search prs to match results from GitHub UI.
+        id: search
         run: |
           AUTHOR="${{ github.event.inputs.author }}"
           if [ -z "$AUTHOR" ]; then
             AUTHOR="${{ github.actor }}"
           fi
-          Q="is:pr is:open author:${AUTHOR} archived:false"
+          CMD=(gh search prs --author "$AUTHOR" --state open \
+            --limit ${{ github.event.inputs.limit }} \
+            --json number,repository,title,url)
           if [ -n "${{ github.event.inputs.org }}" ]; then
-            Q="$Q org:${{ github.event.inputs.org }}"
+            CMD+=(--owner "${{ github.event.inputs.org }}")
           fi
           if [ -n "${{ github.event.inputs.title_filter }}" ]; then
-            Q="$Q in:title ${{ github.event.inputs.title_filter }}"
+            CMD+=(--search "${{ github.event.inputs.title_filter }}" --match title)
           fi
-          echo "Search query: $Q"
-          echo "q=$Q" >> $GITHUB_OUTPUT
-
-      - name: Search PRs
-        id: search
-        run: |
-          gh search issues "${{ steps.q.outputs.q }}" \
-            --limit ${{ github.event.inputs.limit }} \
-            --json number,repository,title,url \
-            | tee prs.json
+          echo "Search command: ${CMD[*]}"
+          "${CMD[@]}" | tee prs.json
           COUNT=$(jq 'length' prs.json)
           echo "Found $COUNT PR(s)"
           echo "count=$COUNT" >> $GITHUB_OUTPUT
