--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -25,8 +25,7 @@ on:
         default: true
       limit:
         description: "Max PRs to process (1–1000)"
-        type: number
-        default: 1000
+        default: '1000'
       comment:
         description: "Closing comment"
         type: string
@@ -123,13 +122,13 @@ jobs:
               echo "Excluding $EXCLUDE_COUNT PR URL(s):"
               jq -r '.[]' exclude.json
               node <<'EOF'
-const { readFileSync, writeFileSync } = require('node:fs');
+  const { readFileSync, writeFileSync } = require('node:fs');
 
-const prs = JSON.parse(readFileSync('prs.json', 'utf8'));
-const exclude = new Set(JSON.parse(readFileSync('exclude.json', 'utf8')));
-const filtered = prs.filter(pr => !exclude.has(pr.url));
+  const prs = JSON.parse(readFileSync('prs.json', 'utf8'));
+  const exclude = new Set(JSON.parse(readFileSync('exclude.json', 'utf8')));
+  const filtered = prs.filter(pr => !exclude.has(pr.url));
 
-writeFileSync('prs.json', JSON.stringify(filtered));
+  writeFileSync('prs.json', JSON.stringify(filtered));
 EOF
             fi
           fi
