--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "lint": "echo 'no lint configured'",
     "test": "node --test",
     "test:ci": "node --test"
+  },
+  "devDependencies": {
+    "yaml": "^2.8.1"
   }
 }
