🐛 : – restore manual dispatch for close workflow
what: drop unsupported number input type and add regression test
why: GH hid Run workflow button when encountering invalid workflow_dispatch types
how to test: npm run lint && npm run test:ci

--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -25,8 +25,7 @@ on:
         default: true
       limit:
         description: "Max PRs to process (1–1000)"
-        type: number
-        default: 1000
+        default: "1000"
       comment:
         description: "Closing comment"
         type: string
