🧹 : – fix close workflow exclude filter command
what: replace the exclude filter heredoc with an inline python command\nwhy: gitHub rejected the workflow due to malformed yaml at the heredoc body\nhow to test: npm run lint && npm run test:ci

--- a/.github/workflows/close-my-open-prs.yml
+++ b/.github/workflows/close-my-open-prs.yml
@@ -129,15 +129,10 @@ jobs:
 
           EXCLUDE_INPUT="${{ github.event.inputs.exclude_urls }}"
           if [ -n "$EXCLUDE_INPUT" ]; then
-            printf '%s\n' "$EXCLUDE_INPUT" | python3 - <<'PY' > exclude.json
-import json
-import re
-import sys
-
-data = sys.stdin.read().replace('\r', '\n')
-parts = [part.strip() for part in re.split(r'[\s,;|]+', data) if part.strip()]
-json.dump(parts, sys.stdout)
-PY
+            printf '%s\n' "$EXCLUDE_INPUT" | python3 -c "import json, re, sys; \
+              data = sys.stdin.read().replace('\\r', '\\n'); \
+              parts = [part.strip() for part in re.split(r'[\\s,;|]+', data) if part.strip()]; \
+              json.dump(parts, sys.stdout)" > exclude.json
             EXCLUDE_COUNT=$(jq 'length' exclude.json)
             if [ "$EXCLUDE_COUNT" -gt 0 ]; then
               echo "Excluding $EXCLUDE_COUNT PR URL(s):"
