--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "echo 'no lint configured'",
-    "test": "node --test",
-    "test:ci": "node --test"
+    "build": "tsc -p tsconfig.json",
+    "lint": "tsc -p tsconfig.json --noEmit",
+    "test": "npm run build && node --test",
+    "test:ci": "npm run build && node --test"
+  },
+  "dependencies": {
+    "@actions/artifact": "^2.1.7",
+    "@actions/core": "^1.10.1"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
+    "typescript": "^5.4.5",
     "yaml": "^2.8.1"
   }
 }
