🧹 : – Fix workflow exclude parsing and lint actions
what: replace the heredoc parser and add actionlint CI job

why: avoid python indentation errors and catch workflow issues early

how to test: npm run lint && npm run test:ci

Refs: n/a

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,13 @@ on:
 
 
 jobs:
+  lint-actions:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Lint GitHub Actions workflows with actionlint
+        uses: rhysd/actionlint@v1
+
   test:
     runs-on: ubuntu-latest
     steps:
