Install actionlint via script in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install actionlint
+        run: bash <(curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
       - name: Lint GitHub Actions workflows with actionlint
-        uses: rhysd/actionlint@v1.7.9
+        run: ./actionlint
 
   test:
     runs-on: ubuntu-latest
